@@ -3,6 +3,7 @@ PHP                                                                        NEWS
 ?? Nov 2005, PHP 5.1
 - Fixed bug #35278 (Multiple virtual() calls crash Apache 2 php module). (Ilia)
 - Fixed bug #35273 (Error in mapping soap - java types). (Dmitry)
+- Fixed bug #33153 (crash in mssql_next result). (Frank)
 
 17 Nov 2005, PHP 5.1 Release Candidate 6
 - Changed function parameter parsing to handle integers in a non-strict fashion
